--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-MESSAGES_API=
-TEXT_COMPLETION_API=
-API2_TOKEN=
+CUSTOM_CHATBOT_API=
+OPENAI_API=
+OPENAI_TOKEN=
+MAX_TOKENS=
+TEMPERATURE=
 
 DB_HOST=
 DB_PORT=
