fix: update on example environment variable.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-CUSTOM_CHATBOT_API=
-OPENAI_API=
-OPENAI_TOKEN=
-MAX_TOKENS=
-TEMPERATURE=
+CUSTOM_CHATBOT_API='ADD_ME'
+OPENAI_API="https://api.openai.com/v1/completions"
+OPENAI_TOKEN='ADD_ME'
+MAX_TOKENS=2000
+TEMPERATURE=0
 
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST=localhost
+DB_PORT=9011
+DB_USER=root
+DB_PASSWORD=relayersecret
+DB_NAME=relayer_mysql
